# project_milo

./: .gitignore  Assem3 - chassis_1-1.STL  Assem3 - chassis_2-3.STL  README.md  chassis_1.STL
docker_images/base/: Dockerfile
docker_images/deploy/: Dockerfile
docker_images/dev/: Dockerfile  run.sh
docker_images/devel/: Dockerfile  README.md  run.sh
milo_ws/install/: local_setup.sh  setup.sh
milo_ws/install/milo_description/share/milo_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh  setup.py
milo_ws/log/: latest_build
milo_ws/src/: docker_vscode_test.py
milo_ws/src/example_pkg/: CMakeLists.txt  package.xml
milo_ws/src/example_pkg/example_pkg/: module_to_import.py
milo_ws/src/example_pkg/scripts/: example_node_py.py
milo_ws/src/example_pkg/src/: example_node_cpp.cpp
milo_ws/src/milo_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
milo_ws/src/milo_bringup/launch/: milo_bringup.launch.py
milo_ws/src/milo_description/: package.xml  setup.cfg  setup.py
milo_ws/src/milo_description/config/: drive_milo.rviz  my_controllers.yaml  view_milo.rviz
milo_ws/src/milo_description/launch/: launch_sim.launch.py  rsp.launch.py
milo_ws/src/milo_description/models/milo_bot/: diff_drive_control.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  (+2 more)
milo_ws/src/milo_description/worlds/: obstacles.world
milo_ws/src/simulation/milo_description/: CMakeLists.txt  package.xml  setup.py
milo_ws/src/simulation/milo_simulation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
milo_ws/stl_files/: chassis_2.STL
(+20 files in other folders)
